--- a/src/components/navigation/style.css
+++ b/src/components/navigation/style.css
@@ -1,6 +1,5 @@
 * {
   margin: 0;
-  color: white;
   font-family: 'Inter';
 }
 .navbar {
@@ -9,6 +8,7 @@
   width: 100%;
   max-height: 50px;
   position: fixed;
+  z-index: 2;
 }
 .navbarWrapped {
   max-width: 100vw;
@@ -33,6 +33,7 @@
 .menuLink {
   text-decoration: none;
   transition: 250ms ease;
+  color: white;
 }
 .menuLink:hover {
   color: aqua;
