--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -1,7 +1,9 @@
 .homePage {
   color: black;
+  background-color: #dddddd83;
   box-sizing: border-box;
   overflow-x: hidden;
+  z-index: 0;
 }
 .baners {
   max-width: 100vw;
@@ -14,17 +16,14 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  z-index: -1;
+  z-index: 1;
+  gap: 30px;
 }
-.leftImg {
-  max-width: 1000px;
-  max-height: 1000px;
-}
+
 .rightImg {
   transform: scaleX(-1);
-  max-width: 1000px;
-  max-height: 1000px;
 }
+
 .leftImg,
 .rightImg {
   max-width: 50vw;
@@ -33,6 +32,7 @@
 }
 .godImg {
   max-width: 15vw;
+  margin: 0 -100px;
   height: auto;
   animation: Shake 3s infinite ease, Shadow 3s infinite ease;
 }
